# bmtron

./: CMakeLists.txt  README.md
include/: AI.h  Game.h  Snake.h  constants.h  utilities.h
src/: AI.cpp  Game.cpp  Snake.cpp  main.cpp
